# mlang

./: .gitignore  Cargo.toml  README.md  build.rs  dune-project
backend/: dune  emit.ml  type_checker.ml
core/: ast.ml  dune
frontend/: dune  lexer.ml  parser.messages  parser.ml  parser.mly  tokens.ml
parsing/: .merlin  dune  hello_world.ml
src/: main.rs
src/asts/: mod.rs  parse_tree.rs
src/lowerings/: mod.rs
src/lowerings/llvm/: mod.rs
src/parser/: grammar.y  lex.l
tests/input/: example.lm
