[package]
name = "mmc"
authors = ["Isitha Subasinghe"]
version = "0.1.0"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
