(library
 (name frontend)
 (libraries sedlex core)
 (preprocess
  (pps sedlex.ppx ppx_deriving.show ppx_deriving.ord))
 (flags :standard -w +39))

(menhir
 (modules parser))

; (rule
;  (targets parser_messages.ml)
;  (deps parser.messages parser.mly)
;  (action  (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))
